<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/ignitionStateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/ignition_mode_dot"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/ignitionState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

   </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/carSpeedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/auto_speed_dot"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/carSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/rpmValueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/rpm_value_dot"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/rpmValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/aTempTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/ambient_temp_dot"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/aTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/intTempTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/int_temp_dot"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/intTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/FuelLevelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/fuel_value_dot"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/FuelLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/OilLevelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/oil_level_dot"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/OilLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/SeatPassStatusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/seat_pass_status_dot"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/SeatPassStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/gearTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/gear_status_dot"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/gearStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

</TableLayout>
</ScrollView>