<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        style="@style/LineViewStyle"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/removeAppSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/minus"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/appTestSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/app_test_settings"
            android:textSize="20sp"
            android:textColor="@color/warning"
            tools:ignore="RtlSymmetry"
            android:background="@drawable/rectangle"
            />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Spinner
                android:id="@+id/appSpinner"
                style="@style/spinnerStyle"
                android:layout_width="800dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/app_start_settings"
                tools:ignore="RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/appActivityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:ems="10"
                android:inputType="text"
                android:text=""
                android:textColor="@color/text"
                />

            <TextView
                android:id="@+id/textView11_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/app_start_activity_settings"
                tools:ignore="RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <EditText
                android:id="@+id/appDelayEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textColor="@color/text"
                />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/app_start_delay_settings"
                tools:ignore="RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Spinner
                android:id="@+id/appDisplaySpinner"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                style="@style/spinnerStyle" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/app_start_display_settings"
                tools:ignore="RtlSymmetry" />
        </TableRow>

    </TableLayout>
</LinearLayout>